# PracticeRustWebServer

./: .env  .gitignore  Cargo.toml  TODO.md  readme.md
certify_server/: .env  Cargo.toml  db_new.sql  readme.md
certify_server/src/config/: constants.rs  env.rs
certify_server/src/db_access/: db.rs
certify_server/src/handlers/: rest.rs
certify_server/src/models/: error.rs  mod.rs  state.rs  user.rs
certify_server/src/utils/: encryption.rs  jwt.rs  mod.rs
common_lib/: Cargo.toml
common_lib/src/: lib.rs
consul/: consul_dev.shell  readme.md
consul_reg_lib/: Cargo.toml
consul_reg_lib/src/: consul.rs  lib.rs  model.rs
front_page_vue/: README.md  package-lock.json  package.json
front_page_vue/src/: App.vue  store.js
front_page_vue/src/components/: HelloWorld.vue
front_page_vue/src/router/: index.js
front_page_vue/src/views/: GoodsDetailView.vue  GoodsListView.vue  HomeView.vue  SignInView.vue  SignUpView.vue
goods_server/: Cargo.toml  db_new.sql
goods_server/src/db_access/: db.rs
goods_server/src/handlers/: rest.rs
goods_server/src/models/: goods.rs  mod.rs
inventory_server/: .env  Cargo.toml  build.rs  db_new.sql  readme.md
inventory_server/src/: multiplex_service.rs
inventory_server/src/consul_api/: consul.rs  model.rs
inventory_server/src/db_access/: db.rs
inventory_server/src/handlers/: general.rs  grpc.rs  rest.rs
inventory_server/src/models/: inventory.rs  mod.rs
jwt_lib/: Cargo.toml  readme.md
jwt_lib/src/: lib.rs
jwt_lib/src/utils/: encryption.rs  jwt.rs  mod.rs
markdown_zh/: Chapter1_微服务框架Axum初体验.md  Chapter2_GRPC调用(订单与库存微服务).md  Chapter3_分布式事务(订单与库存微服务).md  Chapter4_Consul微服务发现中心.md  Chapter5_JWT单点登录实现.md
order_server/: .env  Cargo.toml  build.rs  db_local_new.sql  db_new.sql  new_order.json  readme.md
order_server/proto/: order.proto  readme.md
order_server/src/consul_api/: consul.rs  mod.rs
order_server/src/db_access/: db.rs  mod.rs  repo.rs
order_server/src/handlers/: corn.rs  general.rs  grpc.rs  mod.rs  rest.rs
order_server/src/models/: mod.rs  order.rs  state.rs
proto/: inventory.proto  order.proto  readme.md
