[package]
name = "goods_server"
version = "0.1.0"
edition = "2021"
default-run = "goods-server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_lib = { path = "../common_lib" }

axum = { version = "0.6.10", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }

# 追踪和日志库
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"