[package]
name = "inventory_server"
version = "0.1.0"
edition = "2021"
default-run = "inventory-service"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.19", features = ["serde"] }
# grpc
tonic = "0.8"
# 序列化反序列化proto使用的库
prost = "0.11"
hyper = "0.14.19"
futures = "0.3"


# 用来请求consul中心的接口
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2"

log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "inventory-service"

[[bin]]
name = "test-grpc"