[package]
name = "jwt_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }

dotenv = "0.15.0"

# 密码hash
bcrypt = "0.10"

# jwt生成及验证
jsonwebtoken = "7.2"

# uuid生成
uuid = { version = "1.4.0", features = ["serde", "v4"] }
# 并行库
rayon = "1.5"

# 
chrono = { version = "0.4", features = ["serde"] }

# 延迟初始化
lazy_static = "1.4"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 用于帮助解析请求头
headers = "0.3"

http = "0.2.9"