[package]
name = "order_server"
version = "0.1.0"
edition = "2021"
default-run = "order-service"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.19", features = ["serde"] }

[[bin]]
name = "order-service"
