[package]
name = "order_server"
version = "0.1.0"
edition = "2021"
default-run = "order-service"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.19", features = ["serde"] }
# grpc
tonic = "0.8"
# 序列化反序列化proto使用的库
prost = "0.11"
hyper = "0.14.19"
futures = "0.3"
# 唯一id生成库，雪花算法
idgenerator = "2.0.0"

# FromPrimitive派生特性
num-traits = "0.2"
num-derive = "0.3"

# cron定时器
tokio-cron-scheduler = "0.9.4"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "order-service"

[[bin]]
name = "test-grpc"