[package]
name = "order_server"
version = "0.1.0"
edition = "2021"
default-run = "order-service"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt_lib = { path = "../jwt_lib" }
common_lib = { path = "../common_lib" }
consul_reg_lib = { path = "../consul_reg_lib" }

axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }

# 中间件
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }

dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.19", features = ["serde"] }
# grpc
tonic = "0.8"
# 序列化反序列化proto使用的库
prost = "0.11"
hyper = "0.14.19"
futures = "0.3"
# 唯一id生成库，雪花算法
idgenerator = "2.0.0"

# FromPrimitive派生特性
num-traits = "0.2"
num-derive = "0.3"

# cron定时器
tokio-cron-scheduler = "0.9.4"

# 用来请求consul中心的接口
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2"

# 分布式追踪
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"

# uuid生成
uuid = { version = "1.4.0", features = ["serde", "v4"] }

# redis
redis = "0.23.3"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "order-service"

[[bin]]
name = "test-grpc"